feat(book): book management for get and create
